--- a/less/index.less
+++ b/less/index.less
@@ -1,12 +1,12 @@
 // Import your less files here:
+@import "variables";
+@import "mixins";
 
+//general set up:
+@import "reset";
+@import "global";
 
-
-
-
-
-
-
-
-
-
+//website desgin:
+@import "navigation";
+@import "footer";
+@import "home-page";
