--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,20 @@
 // Navigation code here
+
+.navigation {
+  .display(column, center, center);
+  border: 2px solid @nav-border;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 2%;
+  background-color: @nav-bg;
+  nav {
+    .display(row, space-around, center);
+    font-size: 2rem;
+    padding: 2% 0 2%;
+    width: 50%;
+    a {
+      text-decoration: none;
+      color: @nav-font;
+    }
+  }
+}
