desktop design complete

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,3 +5,14 @@
   justify-content: @justify;
   align-items: @align;
 }
+
+.button(@background,@color) {
+  background-color: @background;
+  color: @color;
+  font-size: 2rem;
+  border-radius: 5%;
+  width: 25%;
+  text-align: center;
+  padding: 1rem 2rem;
+  cursor: pointer;
+}
