--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,6 +15,10 @@
     a {
       text-decoration: none;
       color: @nav-font;
+
+      &:hover {
+        color: lighten(@nav-font, 30%);
+      }
     }
   }
 }
