--- a/css/index.css
+++ b/css/index.css
@@ -135,7 +135,7 @@ html {
 html,
 body {
   font-family: "Ubuntu", sans-serif;
-  color: #5E6164;
+  color: #5e6164;
 }
 h1,
 h2,
@@ -143,7 +143,7 @@ h3,
 h4,
 h5 {
   font-family: "Russo One", sans-serif;
-  color: #23293B;
+  color: #23293b;
 }
 h1 {
   font-size: 4rem;
@@ -168,11 +168,11 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid #F1F1F1;
+  border: 2px solid #f1f1f1;
   width: 100%;
   margin: 0 auto;
   padding-top: 2%;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 .navigation nav {
   display: flex;
@@ -185,7 +185,10 @@ p {
 }
 .navigation nav a {
   text-decoration: none;
-  color: #454A59;
+  color: #454a59;
+}
+.navigation nav a:hover {
+  color: #8f95a8;
 }
 footer {
   color: #22283B;
@@ -197,11 +200,14 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.home .intro .earth {
+  width: 100%;
+}
 .home .intro h2 {
-  padding: 15px;
+  padding: 1.5rem;
 }
 .home .intro p {
-  padding: 0 15px;
+  padding: 0 1.5rem;
 }
 .home .space-images {
   display: flex;
@@ -238,6 +244,20 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  background-color: #22283a;
+  color: #f1f1f1;
+  font-size: 2rem;
+  border-radius: 5%;
+  width: 25%;
+  text-align: center;
+  padding: 1rem 2rem;
+  cursor: pointer;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: #f1f1f1;
+  color: #22283a;
 }
 .home .walk .walk-img {
   width: 46%;
