--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,17 +1,17 @@
 // Home Content
 
 .home {
-
   .intro {
-
+    .earth {
+      width: 100%;
+    }
     h2 {
-      padding: 15px;
+      padding: 1.5rem;
     }
 
     p {
-      padding:0 15px;
+      padding: 0 1.5rem;
     }
-  
   }
 
   .space-images {
@@ -58,13 +58,18 @@
       }
 
       .btn {
+        .button(@btn-bg-color, @btn-font-color);
+        &:hover {
+          background-color: @btn-font-color;
+          color: @btn-bg-color;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
@@ -72,4 +77,4 @@
       }
     }
   }
-}// home
+} // home
