--- a/less/home-page.less
+++ b/less/home-page.less
@@ -25,6 +25,18 @@
       border-radius: 20px;
       height: 100%;
     }
+    @media@phone {
+      .blast {
+        width: 100%;
+      }
+      .sky {
+        display: none;
+      }
+
+      .launch {
+        display: none;
+      }
+    }
   }
 
   .visit-planets {
@@ -40,14 +52,24 @@
   }
 
   .walk {
-    margin-top: 60px;
+    margin-top: 6rem;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
     display: flex;
     justify-content: center;
 
+    @media@phone {
+      flex-direction: column;
+      padding: 0;
+      margin-top: 2rem;
+      padding-top: 2rem;
+    }
+
     .walk-text {
       width: 50%;
+      @media@phone {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -59,6 +81,9 @@
 
       .btn {
         .button(@btn-bg-color, @btn-font-color);
+        @media@phone {
+          width: 100%;
+        }
         &:hover {
           background-color: @btn-font-color;
           color: @btn-bg-color;
@@ -69,6 +94,11 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media@phone {
+        order: -1;
+        width: 100%;
+        margin: 0;
+      }
 
       img {
         width: 100%;
